-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.16.1
-
aarch64
TOSS 5 with kernel 5.14.0-503.40.1.el9_5.aarch64
lustre 2.16.1_1.llnl
https://github.com/LLNL/lustre/tree/2.16.1_1.llnl
gcc 11.5.0.20240719
-
3
-
9223372036854775807
When building rpms using koji for TOSS 5 (RHEL 9 based) , aarch64, we hit the error
/builddir/build/BUILD/lustre-2.16.1_1.llnl/lnet/klnds/kfilnd/kfilnd_tn.c:577:1: error: control reaches end of non-void function [-Werror=return-type]