LU-18988 kfilnd: add return value after LBUGs

To get rid of compiler warnings of the kind
"control reaches end of non-void function",
add return statements after LBUGs.

Signed-off-by: Gian-Carlo DeFazio <defazio1@llnl.gov>
Change-Id: Ie8596c7527fa68f88e807ca290157b4a4dc891cf
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/59157
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>